--- a/wwr/index.html
+++ b/wwr/index.html
@@ -9,9 +9,9 @@
 
 <body>
   <header>
-    <h1>[Site name] Site Plan</h1>
-    <h2>[FirstName LastName]</h2>
-    <h2>WDD 130-[section]</h2>
+    <h1>[CoolWhiteWaterRafting] Site Plan</h1>
+    <h2>[David P]</h2>
+    <h2>WDD 130-[1]</h2>
     <!-- In the header above, add the name of your site, your name and class number. For example if you are in section 3 you would put WDD 130-03 -->
   </header>
   <main>
@@ -19,11 +19,13 @@
     <hr />
     <h2>Overview</h2>
     <h3>Purpose</h3>
-    <p>[Your purpose here]</p>
+    <p>[We are here to provide you the whitest and most water rafting you've ever darn rafted. If you came here for yellow or purple water rafting, you've 
+        come to the wrong place. We offer instransigent oars and distended jackets. Whatever your wildest rafting needs, we will assist you!]</p>
     <!-- change this -->
 
     <h3>Audience</h3>
-    <p>[Your audience here]</p>
+    <p>[Are you young and crazy? Do you need a little excitement in your life? Are you thinking about taking that family member on a wet and terrifying adventure 
+        for their birthday but not sure where to look? Well congratulations! Your look is over! We exclusively cater to all young and crazy individuals.]</p>
     <!-- change this -->
 
     <hr />
@@ -40,8 +42,8 @@
     <!--  The colors you choose for a website are one of the most important decisions you will make. Follow the instructions on the activity in Canvas then return and replace the color codes below with the hex color codes (the 6 digit numbers that show at the bottom of each color) for the colors you have chosen below.  You should have at least 2 colors but do not have to fill in all 4 if you do not need them.  -->
 
     <!-- Copy and paste the URL to your finished palette below. Replace the href value that is there with yours. Make sure to paste it into both the href value and the content text of the <a> tag -->
-    <p>Palette URL:</p>
-    <a href="https://coolors.co/396e94-e7c24f-a43312-381d2a-aabd8c"
+    <p>Palette URL:https://coolors.co/bfbfbf-989c94-435745-0f98fa</p>
+    <a href="https://coolors.co/bfbfbf-989c94-435745-0f98fa"
       target="_blank">https://coolors.co/396e94-e7c24f-a43312-381d2a-aabd8c</a>
 
     <table class="colors">
