--- a/wwr/index.html
+++ b/wwr/index.html
@@ -12,7 +12,7 @@
     </header>
 
     <a id="logo_link" href="index.html"> 
-        <image class="logo" src="images/logo.png" alt="Dry Oar Logo">
+        <img class="logo" src="images/logo.png" alt="Dry Oar Logo">
     </a>
 
     <nav>
