--- a/wwr/index.html
+++ b/wwr/index.html
@@ -52,6 +52,8 @@
                 <h2>Rivers</h2>
             </section>
 
+            <div id="background"></div> 
+
             <section class="camping-card">
                 <img class="card-img" src="images/camping.jpg" alt="tent in mountains">
                 <img class="icon" src="images/fire_icon.png" alt="fire icon">
