--- a/doctrinesearcher/site-plan.html
+++ b/doctrinesearcher/site-plan.html
@@ -9,8 +9,8 @@
 
   <body>
     <header>
-      <h1>[Site name] Site Plan</h1>
-      <h2>FirstName LastName</h2>
+      <h1>Doctrinesearcher Site Plan</h1>
+      <h2>David P</h2>
       <h2>WDD 130-[section]</h2>
       <!-- In the header above, add the name or your site, your name and class number. For example if you are in section 3 you would put WDD 130.03 -->
     </header>
@@ -20,7 +20,7 @@
       <hr>
       <h2>Overview</h2>
       <h3>Purpose</h3>
-      <p>My aim is to make the scriptures easily accessible to everyone. I do this by curating a list of resources for various topics that can be easily referenced for your study. Think of it like a gospel dictionary!</p>  <!-- change this -->
+      <p>My aim is to make the scriptures easily accessible to everyone. I do this by compiling a list of resources for various topics that can be easily referenced for your study. Think of it like a gospel dictionary!</p>  <!-- change this -->
 
 
       <h3>Audience</h3>
