--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -115,11 +115,12 @@
     </div>
     <hr />
     <h2>Wireframes</h2>
+    <img src="images/wireframe.png" alt="images/wireframe.png" />
     <!-- Create an additional wireframe for your site. List it here below the Home page wireframe. -->
 
     <h3>Home</h3>
 
-    <img src="https://byui-wdd.github.io/wdd130/rafting_images/wireframe_home.png" alt="home page wireframe" />
+    <img src="" alt="home page wireframe" />
 
     <h3>[Page 2]</h3>
 
