--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -115,7 +115,7 @@
     </div>
     <hr />
     <h2>Wireframes</h2>
-    <img src="images/wireframe.png" alt="images/wireframe.png" />
+    <img src="images/wireframe.png" alt="images/error_image.png" />
     <!-- Create an additional wireframe for your site. List it here below the Home page wireframe. -->
 
     <h3>Home</h3>
