Site plan pages 2 and 3 update

--- a/doctrinesearcher/site-plan.html
+++ b/doctrinesearcher/site-plan.html
@@ -131,22 +131,65 @@
         <img src="#" alt="image for homepage">
 
       </ul>
-      <h3>[Page 2]</h3>
+      <h3>Why Use Doctrine Searcher?</h3>
       <p>
-        [Written copy for the Page 2 here]
+        In a day and age where so much information is being spread about the church and the beliefs of 
+        Latter-Day Saints, it is hard to know where to look when we have a question about a certain topic. 
+        We are taught to use divinely appointed resources when increasing our knowledge of the gospel, but 
+        what do we do when the answer to our question is not on the church’s website? That is the problem 
+        that I want to provide a solution to. I want to provide a directory of information and resources 
+        on a variety of searchable topics that people can use to answer their questions. 
+
+        As far as I am aware, there is nothing else out on the internet quite like what I am describing. 
+        ChurchofJesusChrist.org has an extensive catalog of answered questions, but they are primarily 
+        articles and are sometimes lacking in additional resources. Bookofmormoncentral.org has a lot 
+        of resources, but they may or may not have material for questions the average Latter-Day Saint 
+        might have. Even some of the more versatile and general websites like the Interpreter Foundation 
+        can feel a little too rigorous and aren’t always very accessible if you do not have a lot of time 
+        to pour over the articles. What I want to do is bring together a great collection of commonly 
+        queried topics, a reliable library of trustworthy study materials, all while keeping everything 
+        user friendly and intuitive to understand. Some of the references this website will include are 
+        key scripture references, relevant conference talks, modern and historical statements by church 
+        leaders, gospel topics essays, YouTube videos, Maxwell Institute papers, books, commentaries, 
+        and other additional third-party documentation that may also be useful.
       </p>
       <p>Images for the Page 2</p>
-        <img src="#" alt="image for page">
-        <img src="#" alt="image for page">
+        <img src="img\study book.webp" alt="img\books.jpeg">
+        <img src="img\top down books.webp" alt="img\books.jpeg">
 
       </ul>
-      <h3>[Page 3]</h3>
+      <h3>How Should I Use Doctrine Searcher?</h3>
       <p>
-        [Written copy for the Page 3 here]
+        As users engage with this website, they should practice identifying what the most important 
+        resources are when looking for information and what less important resources are. For example, 
+        a citation from the Interpreter Foundation is not going to have the same level of authority as 
+        a citation from the Book of Mormon. Users should establish what the primary sources of information 
+        are, and then work their way up the information tree to get the most encompassing view of the topic 
+        they would like to have addressed. 
+
+	      This website will attempt to lay out information in order of its level of authority. It may look 
+        something like Scripture > words of the prophets > third party commentaries > etc. 
+
+        As the user explore Doctrine Searcher, they will operate the website’s navigation menu to find topics that they are interested in learning about. Here is an example of a question you could expect to have answered on this website. If you search the keywords baptism for the dead, your results might look something like this:
+        Key scripture passages:
+        D&C 128
+        D&C 127
+        1 Corinthians 15:29
+        D&C 138
+        Conference talks:
+        The Redemption of the Dead and the Testimony of Jesus, D. Todd Christofferson, October 2000
+        The Joy of Redeeming the Dead, Richard G. Scott, October 2012
+        Gathering the Family of God, Henry B. Eyring, April 2017
+        Additional Resources:
+        Gospel Topics Essay here
+        FairLatterDaySaints article here
+        The Collected Works of Hugh Nibley Volume 4: Mormonism and Early Christianity (note to format text to be more readable)
+
+
       </p>
       <p>Images for the Page 3</p>
-        <img src="#" alt="image for page3">
-        <img src="#" alt="image for page3">
+        <img src="img\tall tree.jpeg" alt="img\pexels-photo-12176211.jpeg">
+        <img src="img\bulb.webp" alt="img\pexels-photo-12176211.jpeg">
 
       </ul>
       <hr>
