Updating text and pictures

--- a/doctrinesearcher/site-plan.html
+++ b/doctrinesearcher/site-plan.html
@@ -87,8 +87,8 @@
       <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. --> 
       <nav>
         <a href="#">Home</a>
-        <a href="#">Page2</a>
-        <a href="#">Page3</a>
+        <a href="#">Website Guide</a>
+        <a href="#">Website</a>
       </nav>
       <hr>
       <h2>
@@ -99,10 +99,10 @@
           Home
         </div>
         <div class="sm-page2">
-          [Page2] <!-- change this -->
+          Website Guide <!-- change this -->
         </div>
         <div class="sm-page3">
-          [Page3]  <!-- change this -->
+          Newest Article: Eternal Marriage  <!-- change this -->
         </div>
 
         <div class="top">
@@ -124,15 +124,6 @@
       </h2>
       <h3>Home page</h3>
       <p>
-        [Written copy for the home page here]
-      </p>
-      <p>Images for the Home page</p>
-        <img src="#" alt="image for homepage">
-        <img src="#" alt="image for homepage">
-
-      </ul>
-      <h3>Why Use Doctrine Searcher?</h3>
-      <p>
         In a day and age where so much information is being spread about the church and the beliefs of 
         Latter-Day Saints, it is hard to know where to look when we have a question about a certain topic. 
         We are taught to use divinely appointed resources when increasing our knowledge of the gospel, but 
@@ -153,12 +144,12 @@
         leaders, gospel topics essays, YouTube videos, Maxwell Institute papers, books, commentaries, 
         and other additional third-party documentation that may also be useful.
       </p>
-      <p>Images for the Page 2</p>
-        <img src="img\study book.webp" alt="img\books.jpeg">
-        <img src="img\top down books.webp" alt="img\books.jpeg">
+      <p>Images for the Home page</p>
+      <img src="img\tall tree.jpeg" alt="img\pexels-photo-12176211.jpeg">
+      <img src="img\bulb.webp" alt="img\pexels-photo-12176211.jpeg">
 
       </ul>
-      <h3>How Should I Use Doctrine Searcher?</h3>
+      <h3>Website Guide</h3>
       <p>
         As users engage with this website, they should practice identifying what the most important 
         resources are when looking for information and what less important resources are. For example, 
@@ -184,12 +175,40 @@
         Gospel Topics Essay here
         FairLatterDaySaints article here
         The Collected Works of Hugh Nibley Volume 4: Mormonism and Early Christianity (note to format text to be more readable)
+      </p>
+      <p>Images for the Page 2</p>
+        <img src="img\study book.webp" alt="img\books.jpeg">
+        <img src="img\top down books.webp" alt="img\books.jpeg">
+
+      </ul>
+      <h3>Newest Article: Eternal Marriage</h3>
+      <p>
+          
+        One of the unique characteristics of the Church of Jesus Christ of Latter-Day Saints is the high emphasis on Marriage and the family. Most world religions are very family oriented, but in very few places can you find a church that locates marriage at the climax of human spiritual development. Eternal marriage is the crowning ordinance in Latter-Day Saint theology, opening the gateway for exaltation. 
+        Interestingly, an individual’s spouse is the only other person aside from the Lord that we have been commanded to love with all our hearts in the scriptures (D&C 42:22). Why is this? An Ensign articles puts it simply, “Man has certain basic needs—moral, social, biological, and spiritual—and these can only be fully realized in the God-ordained institution of eternal marriage.” The article goes on to say, “The Latter-day Saint concept of eternal progression includes eternal development, eternal increase of knowledge, power, intelligence, awareness, and all the characteristics and capacities that make for Godhood. But in the economy of God man cannot attain this state of continuing perfection in his unfinished or unmarried state. There must be growth and increase of the whole man; in other words, the man who has found and been united to his other half.”
+
+        Key Scripture Passages:
+
+        Genesis 2:18, 24
+        D&C 132:19
+        Matthew 19:6
+        1 Corinthians 11:11
+        Proverbs 18:22
+
+        Talks:
+        “Celestial Marriage,” Russel M. Nelson
+        “Marriage Is Essential to His Eternal Plan,” David A. Bednar
+        “The Marriage That Endures,” Gordon B. Hinkley 
+
+        Additional Resources:
+        “The LDS Concept of Eternal Marriage,” Ensign 
+        “Putting My Marriage Before My Pride,” Ensign (note to format text to be more readable)
 
 
       </p>
       <p>Images for the Page 3</p>
-        <img src="img\tall tree.jpeg" alt="img\pexels-photo-12176211.jpeg">
-        <img src="img\bulb.webp" alt="img\pexels-photo-12176211.jpeg">
+        <img src="img\rings" alt="img\pexels-photo-12176211.jpeg">
+        <img src="img\brigham_city_utah_temple_dawn.jpeg" alt="img\pexels-photo-12176211.jpeg">
 
       </ul>
       <hr>
