--- a/doctrinesearcher/site-plan.html
+++ b/doctrinesearcher/site-plan.html
@@ -88,7 +88,7 @@
       <nav>
         <a href="#">Home</a>
         <a href="#">Website Guide</a>
-        <a href="#">Website</a>
+        <a href="#">Newest Article: Eternal Marriage</a>
       </nav>
       <hr>
       <h2>
