--- a/doctrinesearcher/site-plan.html
+++ b/doctrinesearcher/site-plan.html
@@ -226,13 +226,13 @@
 
       <h3>[Page 2]</h3>
       <p>         
-        [Any additional details about page 2 that the wireframe does not make clear]
+        [Any additional details about home that the wireframe does not make clear]
       </p>
       <img src="img\page2Wireframe.png" alt="page 2 wireframe">
 
       <h3>[Page 3]</h3>
       <p>         
-        [Any additional details about page 3 that the wireframe does not make clear]
+        [Any additional details about home that the wireframe does not make clear]
       </p>
       <img src="img\page3Wireframe.png" alt="page 3 wireframe">
     </main>
