--- a/doctrinesearcher/site-plan.html
+++ b/doctrinesearcher/site-plan.html
@@ -222,19 +222,19 @@
       <p>         
         [Any additional details about home that the wireframe does not make clear]
       </p>
-      <img src="img\page1Wireframe.png" alt="home page wireframe">
+      <img src="#" alt="home page wireframe">
 
       <h3>[Page 2]</h3>
       <p>         
         [Any additional details about home that the wireframe does not make clear]
       </p>
-      <img src="img\page2Wireframe.png" alt="page 2 wireframe">
+      <img src="#" alt="page 2 wireframe">
 
       <h3>[Page 3]</h3>
       <p>         
         [Any additional details about home that the wireframe does not make clear]
       </p>
-      <img src="img\page3Wireframe.png" alt="page 3 wireframe">
+      <img src="#" alt="page 3 wireframe">
     </main>
   </body>
 
