--- a/wwr/index.html
+++ b/wwr/index.html
@@ -19,7 +19,7 @@
             <nav>
                 <a href="index.html"> Home</a>
 
-                <a href="#"> Placeholder </a>
+                <a href="FAQ.html"> FAQ </a>
 
                 <a href="site-plan-rafting.html"> Site plan </a>
 
