Updated site plan links

--- a/doctrinesearcher/website-guide.html
+++ b/doctrinesearcher/website-guide.html
@@ -92,6 +92,8 @@
             <img id="logo-link-footer" src="img\doctrinesearcher-logos_transparent.png" alt="Logo Picture">
         </a>
 
+        <a class="site-plan-link" href="site-plan.html">Site Plan</a>
+
         <p class="doctrine-searcher-footer">
             Doctrine Searcher
         </p>
