Resized site plan images

--- a/doctrinesearcher/site-plan.html
+++ b/doctrinesearcher/site-plan.html
@@ -30,7 +30,7 @@
       <h2>Branding</h2>
       <h3>Website Logo</h3>
       <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
-      <img src="img\doctrinesearcher-logos_black.png" alt="img\doctrinesearcher-logos_white.png">
+      <img class="website-logo" src="img\doctrinesearcher-logos_black.png" alt="img\doctrinesearcher-logos_white.png">
       <hr>
       <h2>
         Style Guide
@@ -145,8 +145,8 @@
         and other additional third-party documentation that may also be useful.
       </p>
       <p>Images for the Home page</p>
-      <img src="img\tall tree.jpeg" alt="img\pexels-photo-12176211.jpeg">
-      <img src="img\bulb.webp" alt="img\pexels-photo-12176211.jpeg">
+      <img class="tree-image" src="img\tall tree.jpeg" alt="img\pexels-photo-12176211.jpeg">
+      <img class="bulb-image" src="img\bulb.webp" alt="img\pexels-photo-12176211.jpeg">
 
       </ul>
       <h3>Website Guide</h3>
@@ -177,8 +177,8 @@
         The Collected Works of Hugh Nibley Volume 4: Mormonism and Early Christianity (note to format text to be more readable)
       </p>
       <p>Images for the Page 2</p>
-        <img src="img\study book.webp" alt="img\books.jpeg">
-        <img src="img\top down books.webp" alt="img\books.jpeg">
+        <img class="study-image" src="img\study book.webp" alt="img\books.jpeg">
+        <img class="top-down-books" src="img\top down books.webp" alt="img\books.jpeg">
 
       </ul>
       <h3>Newest Article: Eternal Marriage</h3>
@@ -207,8 +207,8 @@
 
       </p>
       <p>Images for the Page 3</p>
-        <img src="img\rings" alt="img\pexels-photo-12176211.jpeg">
-        <img src="img\brigham_city_utah_temple_dawn.jpeg" alt="img\pexels-photo-12176211.jpeg">
+        <img class="rings-image" src="img\rings.jpg" alt="img\pexels-photo-12176211.jpeg">
+        <img class="brigham_city_temple" src="img\brigham_city_utah_temple_dawn.jpeg" alt="img\pexels-photo-12176211.jpeg">
 
       </ul>
       <hr>
