--- a/doctrinesearcher/site-plan.html
+++ b/doctrinesearcher/site-plan.html
@@ -50,7 +50,7 @@
       <table class="colors">
         <tr><th>Primary</th><th>Secondary</th><th>Accent 1</th><th>Accent 2</th></tr>
         <!-- Replace the numbers in the boxes below with your hex color codes. Then switch to the site-plan.css file and change your colors there as well. -->
-        <tr><td class="primary">[#0E44C2]</td><td class="secondary">[#E2B328]</td><td class="accent1">[#A09CE7]</td><td class="accent2">[#FFFFFF]</td>
+        <tr><td class="primary">[#0E44C2]</td><td class="secondary">[#E2B328]</td><td class="accent1">[#000970]</td><td class="accent2">[#000000]</td>
       </table>
 
       <!-- ------------------------Step 9------------------------------ -->
