Fixed one more HTML error

--- a/doctrinesearcher/index.html
+++ b/doctrinesearcher/index.html
@@ -54,7 +54,7 @@
                     might have. 
                 </p>
 
-                <img class="first-home-image" src="img/tall tree.jpeg" alt="Tree image">
+                <img class="first-home-image" src="img/tall-tree.jpeg" alt="Tree image">
 
             </section>
 
