Finished Website Guide

--- a/doctrinesearcher/site-plan.html
+++ b/doctrinesearcher/site-plan.html
@@ -161,7 +161,8 @@
 	      This website will attempt to lay out information in order of its level of authority. It may look 
         something like Scripture > words of the prophets > third party commentaries > etc. 
 
-        As the user explore Doctrine Searcher, they will operate the website’s navigation menu to find topics that they are interested in learning about. Here is an example of a question you could expect to have answered on this website. If you search the keywords baptism for the dead, your results might look something like this:
+        As you explore Doctrine searcher, you will operate the website’s navigation menu to find topics that you are interested in learning about. Here is an example of a question you could expect to have answered on this website. 
+        If you search the keywords baptism for the dead, your results might look something like this:
         Key scripture passages:
         D&C 128
         D&C 127
