Fixing Image Name Mistake

--- a/doctrinesearcher/website-guide.html
+++ b/doctrinesearcher/website-guide.html
@@ -30,7 +30,7 @@
 
         <main>
             
-            <img class="main-picture-library" src="img/study book.webp" alt="Library Main Picture">
+            <img class="main-picture-library" src="img/study-book.webp" alt="Study Book Picture">
 
             <section class="first-content-box">
 
